Add feature Login with local
