# Back-end/src/apis/login.api.js
@@ -1,0 +1,6 @@
+const loginApi = require('express').Router();
+const loginController = require('../controllers/login.controller');
+
+loginApi.post('/', loginController.postLogin);
+
+module.exports = loginApi;
