# Front-end/src/apis/accountApi.js
@@ -3,14 +3,19 @@ import axiosClient from './axiosClient';
 const ACCOUNT_API_ENDPOINT = '/accounts';
 
 const accountApi = {
-  // gửi mã xác nhận
+  // fn: gửi mã xác nhận
   postSendVerifyCode: (email) => {
     const url = ACCOUNT_API_ENDPOINT + '/verify';
     return axiosClient.post(url, email);
   },
-  // đăng ký
+  // fn: đăng ký
   postSignUp: (account) => {
     const url = ACCOUNT_API_ENDPOINT + '/signup';
+    return axiosClient.post(url, account);
+  },
+  // fn: đăng nhập
+  postLogin: (account) => {
+    const url = ACCOUNT_API_ENDPOINT + '/login';
     return axiosClient.post(url, account);
   },
 };
